fix row col in about and contact page on mobile

--- a/assets/css/index.sass
+++ b/assets/css/index.sass
@@ -73,3 +73,11 @@ svg
   .h2-title
     padding: 7.5px
     margin: 0
+
+  .thi-columns
+    margin: 0px !important
+    padding: 0px !important
+  
+  .row .col
+    margin: 0px !important
+    padding: 0px !important
