--- a/assets/css/thi_scss.scss
+++ b/assets/css/thi_scss.scss
@@ -141,16 +141,6 @@ hr{
     //border-radius: 6px;
     border: thin solid $raisin-black;
   }
-
-  .thi-columns{
-    margin: 0px !important;
-    padding: 0px !important;
-  }
-  
-  .row .col{
-    margin: 0px !important;
-    padding: 0px !important;
-  }
 }
 
 .post-title:hover{
